// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecentVideo /> should not render with carousel with one video 1`] = `
<Theme
  blog="avclub"
  theme={
    Object {
      "breakpointBanner": "969px",
      "breakpointMedium": "53.125em",
      "color": Object {
        "alert": "#EEB544",
        "amazon": "#F5C056",
        "backgroundLayer": "rgba(0,0,0,0.45)",
        "backgroundLight": "#E6F2F8",
        "black": "#000",
        "blackOverlay": "rgba(0,0,0,0.7)",
        "bodytext": "#222",
        "commerce": "#72AD75",
        "darkBlackOverlay": "rgba(0,0,0,0.9)",
        "darkgray": "#666",
        "darksmoke": "#222",
        "error": "#D24A1D",
        "facebook": "#1877F2",
        "foregroundLayer": "rgba(0,0,0,0.4)",
        "google": "#DB4437",
        "gray": "#7D7D7D",
        "instagram": "#C32AA3",
        "lightgray": "#E5E5E5",
        "linkedin": "#0077B5",
        "logo": "#000",
        "midgray": "#CCC",
        "primary": "#0A7BC2",
        "primaryLight": "#0C91E4",
        "rss": "#7D7D7D",
        "secondarytext": "#7D7D7D",
        "success": "#23891F",
        "twitter": "#1DA1F2",
        "white": "#FFF",
        "whiteOverlay": "rgba(255,255,255,0.7)",
        "whitesmoke": "#F5F5F5",
        "youtube": "#FF0000",
      },
      "columnGutter": "2.25rem",
      "columnGutter19": Object {
        "largeUp": "1.5rem",
        "small19": "1rem",
        "xlargeUp": "2rem",
      },
      "columnPadding": "1.125rem",
      "columnPadding19": Object {
        "largeUp": "0.75rem",
        "small19": "0.5rem",
        "xlargeUp": "1rem",
      },
      "featuredContentWidth": "1024px",
      "globalNavHeight": "80px",
      "linkTransition": "0.1s ease-out",
      "mainContainerWidth": "66.5%",
      "mainContentMaxWidth": "800px",
      "pageWidth": "1336px",
      "postContentMaxWidth": "636px",
      "scrollbackNavHeight": "60px",
      "sidebarContainerWidth": "33.5%",
      "sidebarContentMaxWidth": "360px",
      "sidebarContentMinWidth": "300px",
      "slideshowTransitionDuration": "0.2s",
      "typography": Object {
        "body": Object {
          "fontFamily": "ElizabethSerif, Georgia, serif",
          "fontSizes": Object {
            "large": "27px",
            "medium": "19px",
            "small": "15px",
            "xlarge": "30px",
            "xsmall": "14px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "embiggenedHeadlineSize": "34px",
        "headline": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "headlineLineHeight": "1.3",
        "headlineSize": "24px",
        "permalinkHeadlineLineHeight": "1.2",
        "permalinkHeadlineSize": Object {
          "mediumUp": "2.5rem",
          "small": "2rem",
          "xxxlargeUp": "3rem",
        },
        "primary": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "serif": Object {
          "fontFamily": "ElizabethSerif, Georgia, serif",
          "fontSizes": Object {
            "large": "27px",
            "medium": "19px",
            "small": "15px",
            "xlarge": "30px",
            "xsmall": "14px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "tertiary": Object {
          "fontFamily": "FiraSans, sans-serif",
          "fontSizes": Object {
            "large": "29px",
            "medium": "21px",
            "small": "17px",
            "xlarge": "35px",
            "xsmall": "15px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "utility": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
      },
    }
  }
>
  <recent-video__VideoContainer
    position="frontpage"
  >
    <Header
      blogName="The A.V. Club"
      inSidebar={false}
      multipleVideos={false}
      position="frontpage"
      videoPageUrl="https://avclub.com/video"
    />
    <OnScreenHOC
      blogName="The A.V. Club"
      isAutoplay={true}
      isReplay={false}
      nowPlayingIndex={0}
      playNextVideo={[Function]}
      playVideo={[Function]}
      videoPageUrl="https://avclub.com/video"
      videos={
        Array [
          Object {
            "id": "105201",
            "postInfo": Object {
              "headline": "The First Order Watched Over Our Interview in <i>Star Wars: Galaxy&#39;s Edge</i>",
              "id": 1835238447,
              "isVideo": true,
              "permalink": "https://io9.gizmodo.com/the-first-order-watched-over-our-interview-in-star-wars-1835238447",
              "publishTimeMillis": 1559676600447,
              "thumbnailId": "qa/3691511",
            },
            "poster": Object {
              "id": "qa/3691511",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/105201/105201_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
        ]
      }
    />
    <recent-video__Title
      position="frontpage"
    >
      <recent-video__TitleLink
        dangerouslySetInnerHTML={
          Object {
            "__html": "The First Order Watched Over Our Interview in <i>Star Wars: Galaxy&#39;s Edge</i>",
          }
        }
        href="https://io9.gizmodo.com/the-first-order-watched-over-our-interview-in-star-wars-1835238447"
        onClick={[Function]}
      />
    </recent-video__Title>
    <recent-video__PublishDate>
      6/04/19 3:30PM
    </recent-video__PublishDate>
  </recent-video__VideoContainer>
</Theme>
`;

exports[`<RecentVideo /> should render carousel with multiple videos 1`] = `
<Theme
  blog="avclub"
  theme={
    Object {
      "breakpointBanner": "969px",
      "breakpointMedium": "53.125em",
      "color": Object {
        "alert": "#EEB544",
        "amazon": "#F5C056",
        "backgroundLayer": "rgba(0,0,0,0.45)",
        "backgroundLight": "#E6F2F8",
        "black": "#000",
        "blackOverlay": "rgba(0,0,0,0.7)",
        "bodytext": "#222",
        "commerce": "#72AD75",
        "darkBlackOverlay": "rgba(0,0,0,0.9)",
        "darkgray": "#666",
        "darksmoke": "#222",
        "error": "#D24A1D",
        "facebook": "#1877F2",
        "foregroundLayer": "rgba(0,0,0,0.4)",
        "google": "#DB4437",
        "gray": "#7D7D7D",
        "instagram": "#C32AA3",
        "lightgray": "#E5E5E5",
        "linkedin": "#0077B5",
        "logo": "#000",
        "midgray": "#CCC",
        "primary": "#0A7BC2",
        "primaryLight": "#0C91E4",
        "rss": "#7D7D7D",
        "secondarytext": "#7D7D7D",
        "success": "#23891F",
        "twitter": "#1DA1F2",
        "white": "#FFF",
        "whiteOverlay": "rgba(255,255,255,0.7)",
        "whitesmoke": "#F5F5F5",
        "youtube": "#FF0000",
      },
      "columnGutter": "2.25rem",
      "columnGutter19": Object {
        "largeUp": "1.5rem",
        "small19": "1rem",
        "xlargeUp": "2rem",
      },
      "columnPadding": "1.125rem",
      "columnPadding19": Object {
        "largeUp": "0.75rem",
        "small19": "0.5rem",
        "xlargeUp": "1rem",
      },
      "featuredContentWidth": "1024px",
      "globalNavHeight": "80px",
      "linkTransition": "0.1s ease-out",
      "mainContainerWidth": "66.5%",
      "mainContentMaxWidth": "800px",
      "pageWidth": "1336px",
      "postContentMaxWidth": "636px",
      "scrollbackNavHeight": "60px",
      "sidebarContainerWidth": "33.5%",
      "sidebarContentMaxWidth": "360px",
      "sidebarContentMinWidth": "300px",
      "slideshowTransitionDuration": "0.2s",
      "typography": Object {
        "body": Object {
          "fontFamily": "ElizabethSerif, Georgia, serif",
          "fontSizes": Object {
            "large": "27px",
            "medium": "19px",
            "small": "15px",
            "xlarge": "30px",
            "xsmall": "14px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "embiggenedHeadlineSize": "34px",
        "headline": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "headlineLineHeight": "1.3",
        "headlineSize": "24px",
        "permalinkHeadlineLineHeight": "1.2",
        "permalinkHeadlineSize": Object {
          "mediumUp": "2.5rem",
          "small": "2rem",
          "xxxlargeUp": "3rem",
        },
        "primary": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "serif": Object {
          "fontFamily": "ElizabethSerif, Georgia, serif",
          "fontSizes": Object {
            "large": "27px",
            "medium": "19px",
            "small": "15px",
            "xlarge": "30px",
            "xsmall": "14px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "tertiary": Object {
          "fontFamily": "FiraSans, sans-serif",
          "fontSizes": Object {
            "large": "29px",
            "medium": "21px",
            "small": "17px",
            "xlarge": "35px",
            "xsmall": "15px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "utility": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
      },
    }
  }
>
  <recent-video__VideoContainer
    position="frontpage"
  >
    <Header
      blogName="The A.V. Club"
      inSidebar={false}
      multipleVideos={true}
      position="frontpage"
      videoPageUrl="https://avclub.com/video"
    />
    <OnScreenHOC
      blogName="The A.V. Club"
      isAutoplay={true}
      isReplay={false}
      nowPlayingIndex={0}
      playNextVideo={[Function]}
      playVideo={[Function]}
      videoPageUrl="https://avclub.com/video"
      videos={
        Array [
          Object {
            "id": "105201",
            "postInfo": Object {
              "headline": "The First Order Watched Over Our Interview in <i>Star Wars: Galaxy&#39;s Edge</i>",
              "id": 1835238447,
              "isVideo": true,
              "permalink": "https://io9.gizmodo.com/the-first-order-watched-over-our-interview-in-star-wars-1835238447",
              "publishTimeMillis": 1559676600447,
              "thumbnailId": "qa/3691511",
            },
            "poster": Object {
              "id": "qa/3691511",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/105201/105201_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
          Object {
            "id": "101688",
            "postInfo": Object {
              "headline": "Arya Stark Understood Death, But Chose Life",
              "id": 1835091510,
              "isVideo": true,
              "permalink": "https://io9.gizmodo.com/arya-stark-understood-death-but-chose-life-1835091510",
              "publishTimeMillis": 1559318400510,
              "thumbnailId": "qa/3690005",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/101688/101688_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
          Object {
            "id": "114183",
            "postInfo": Object {
              "headline": "We Found the Very Best Truly Wireless Earbuds",
              "id": 1835118531,
              "isVideo": true,
              "permalink": "https://gizmodo.com/these-are-the-very-best-truly-wireless-earbuds-1835118531",
              "publishTimeMillis": 1559311200531,
              "thumbnailId": "xkb24d6jdoqbzy0f2b3h",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/114183/114183_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
          Object {
            "id": "105096",
            "postInfo": Object {
              "headline": "Cersei Lannister Rose to the Top of a Crumbling Kingdom",
              "id": 1835090598,
              "isVideo": true,
              "permalink": "https://io9.gizmodo.com/cersei-lannister-rose-to-the-top-of-a-crumbling-kingdom-1835090598",
              "publishTimeMillis": 1559150100598,
              "thumbnailId": "qa/3688840",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/105096/105096_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
          Object {
            "id": "109322",
            "postInfo": Object {
              "headline": "Google&#39;s Quest to Build the Perfect One-Tap Smartphone Camera",
              "id": 1835123686,
              "isVideo": true,
              "permalink": "https://gizmodo.com/googles-quest-to-build-the-perfect-one-tap-smartphone-c-1835123686",
              "publishTimeMillis": 1559744700686,
              "thumbnailId": "qa/3689149",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/109322/109322_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
        ]
      }
    />
    <recent-video__Title
      position="frontpage"
    >
      <recent-video__TitleLink
        dangerouslySetInnerHTML={
          Object {
            "__html": "The First Order Watched Over Our Interview in <i>Star Wars: Galaxy&#39;s Edge</i>",
          }
        }
        href="https://io9.gizmodo.com/the-first-order-watched-over-our-interview-in-star-wars-1835238447"
        onClick={[Function]}
      />
    </recent-video__Title>
    <recent-video__PublishDate>
      6/04/19 3:30PM
    </recent-video__PublishDate>
    <Carousel
      nowPlaying={
        Object {
          "id": "105201",
          "postInfo": Object {
            "headline": "The First Order Watched Over Our Interview in <i>Star Wars: Galaxy&#39;s Edge</i>",
            "id": 1835238447,
            "isVideo": true,
            "permalink": "https://io9.gizmodo.com/the-first-order-watched-over-our-interview-in-star-wars-1835238447",
            "publishTimeMillis": 1559676600447,
            "thumbnailId": "qa/3691511",
          },
          "poster": Object {
            "id": "qa/3691511",
          },
          "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/105201/105201_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
          "type": "kinjavideo",
          "videoPage": true,
        }
      }
      onVideoClick={[Function]}
      videos={
        Array [
          Object {
            "id": "105201",
            "postInfo": Object {
              "headline": "The First Order Watched Over Our Interview in <i>Star Wars: Galaxy&#39;s Edge</i>",
              "id": 1835238447,
              "isVideo": true,
              "permalink": "https://io9.gizmodo.com/the-first-order-watched-over-our-interview-in-star-wars-1835238447",
              "publishTimeMillis": 1559676600447,
              "thumbnailId": "qa/3691511",
            },
            "poster": Object {
              "id": "qa/3691511",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/105201/105201_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
          Object {
            "id": "101688",
            "postInfo": Object {
              "headline": "Arya Stark Understood Death, But Chose Life",
              "id": 1835091510,
              "isVideo": true,
              "permalink": "https://io9.gizmodo.com/arya-stark-understood-death-but-chose-life-1835091510",
              "publishTimeMillis": 1559318400510,
              "thumbnailId": "qa/3690005",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/101688/101688_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
          Object {
            "id": "114183",
            "postInfo": Object {
              "headline": "We Found the Very Best Truly Wireless Earbuds",
              "id": 1835118531,
              "isVideo": true,
              "permalink": "https://gizmodo.com/these-are-the-very-best-truly-wireless-earbuds-1835118531",
              "publishTimeMillis": 1559311200531,
              "thumbnailId": "xkb24d6jdoqbzy0f2b3h",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/114183/114183_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
          Object {
            "id": "105096",
            "postInfo": Object {
              "headline": "Cersei Lannister Rose to the Top of a Crumbling Kingdom",
              "id": 1835090598,
              "isVideo": true,
              "permalink": "https://io9.gizmodo.com/cersei-lannister-rose-to-the-top-of-a-crumbling-kingdom-1835090598",
              "publishTimeMillis": 1559150100598,
              "thumbnailId": "qa/3688840",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/105096/105096_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
          Object {
            "id": "109322",
            "postInfo": Object {
              "headline": "Google&#39;s Quest to Build the Perfect One-Tap Smartphone Camera",
              "id": 1835123686,
              "isVideo": true,
              "permalink": "https://gizmodo.com/googles-quest-to-build-the-perfect-one-tap-smartphone-c-1835123686",
              "publishTimeMillis": 1559744700686,
              "thumbnailId": "qa/3689149",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/109322/109322_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
        ]
      }
    />
  </recent-video__VideoContainer>
</Theme>
`;

exports[`<RecentVideo /> should render on permalinks 1`] = `
<Theme
  blog="avclub"
  theme={
    Object {
      "breakpointBanner": "969px",
      "breakpointMedium": "53.125em",
      "color": Object {
        "alert": "#EEB544",
        "amazon": "#F5C056",
        "backgroundLayer": "rgba(0,0,0,0.45)",
        "backgroundLight": "#E6F2F8",
        "black": "#000",
        "blackOverlay": "rgba(0,0,0,0.7)",
        "bodytext": "#222",
        "commerce": "#72AD75",
        "darkBlackOverlay": "rgba(0,0,0,0.9)",
        "darkgray": "#666",
        "darksmoke": "#222",
        "error": "#D24A1D",
        "facebook": "#1877F2",
        "foregroundLayer": "rgba(0,0,0,0.4)",
        "google": "#DB4437",
        "gray": "#7D7D7D",
        "instagram": "#C32AA3",
        "lightgray": "#E5E5E5",
        "linkedin": "#0077B5",
        "logo": "#000",
        "midgray": "#CCC",
        "primary": "#0A7BC2",
        "primaryLight": "#0C91E4",
        "rss": "#7D7D7D",
        "secondarytext": "#7D7D7D",
        "success": "#23891F",
        "twitter": "#1DA1F2",
        "white": "#FFF",
        "whiteOverlay": "rgba(255,255,255,0.7)",
        "whitesmoke": "#F5F5F5",
        "youtube": "#FF0000",
      },
      "columnGutter": "2.25rem",
      "columnGutter19": Object {
        "largeUp": "1.5rem",
        "small19": "1rem",
        "xlargeUp": "2rem",
      },
      "columnPadding": "1.125rem",
      "columnPadding19": Object {
        "largeUp": "0.75rem",
        "small19": "0.5rem",
        "xlargeUp": "1rem",
      },
      "featuredContentWidth": "1024px",
      "globalNavHeight": "80px",
      "linkTransition": "0.1s ease-out",
      "mainContainerWidth": "66.5%",
      "mainContentMaxWidth": "800px",
      "pageWidth": "1336px",
      "postContentMaxWidth": "636px",
      "scrollbackNavHeight": "60px",
      "sidebarContainerWidth": "33.5%",
      "sidebarContentMaxWidth": "360px",
      "sidebarContentMinWidth": "300px",
      "slideshowTransitionDuration": "0.2s",
      "typography": Object {
        "body": Object {
          "fontFamily": "ElizabethSerif, Georgia, serif",
          "fontSizes": Object {
            "large": "27px",
            "medium": "19px",
            "small": "15px",
            "xlarge": "30px",
            "xsmall": "14px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "embiggenedHeadlineSize": "34px",
        "headline": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "headlineLineHeight": "1.3",
        "headlineSize": "24px",
        "permalinkHeadlineLineHeight": "1.2",
        "permalinkHeadlineSize": Object {
          "mediumUp": "2.5rem",
          "small": "2rem",
          "xxxlargeUp": "3rem",
        },
        "primary": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "serif": Object {
          "fontFamily": "ElizabethSerif, Georgia, serif",
          "fontSizes": Object {
            "large": "27px",
            "medium": "19px",
            "small": "15px",
            "xlarge": "30px",
            "xsmall": "14px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "tertiary": Object {
          "fontFamily": "FiraSans, sans-serif",
          "fontSizes": Object {
            "large": "29px",
            "medium": "21px",
            "small": "17px",
            "xlarge": "35px",
            "xsmall": "15px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "utility": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
      },
    }
  }
>
  <recent-video__VideoContainer
    position="permalink"
  >
    <Header
      blogName="The A.V. Club"
      inSidebar={false}
      multipleVideos={false}
      position="permalink"
      videoPageUrl="https://avclub.com/video"
    />
    <OnScreenHOC
      blogName="The A.V. Club"
      isAutoplay={true}
      isReplay={false}
      nowPlayingIndex={0}
      playNextVideo={[Function]}
      playVideo={[Function]}
      videoPageUrl="https://avclub.com/video"
      videos={
        Array [
          Object {
            "id": "105201",
            "postInfo": Object {
              "headline": "The First Order Watched Over Our Interview in <i>Star Wars: Galaxy&#39;s Edge</i>",
              "id": 1835238447,
              "isVideo": true,
              "permalink": "https://io9.gizmodo.com/the-first-order-watched-over-our-interview-in-star-wars-1835238447",
              "publishTimeMillis": 1559676600447,
              "thumbnailId": "qa/3691511",
            },
            "poster": Object {
              "id": "qa/3691511",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/105201/105201_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
        ]
      }
    />
    <recent-video__Title
      position="permalink"
    >
      <recent-video__TitleLink
        dangerouslySetInnerHTML={
          Object {
            "__html": "The First Order Watched Over Our Interview in <i>Star Wars: Galaxy&#39;s Edge</i>",
          }
        }
        href="https://io9.gizmodo.com/the-first-order-watched-over-our-interview-in-star-wars-1835238447"
        onClick={[Function]}
      />
    </recent-video__Title>
    <recent-video__PublishDate>
      6/04/19 3:30PM
    </recent-video__PublishDate>
  </recent-video__VideoContainer>
</Theme>
`;

exports[`<RecentVideo /> should render on the frontpage 1`] = `
<Theme
  blog="avclub"
  theme={
    Object {
      "breakpointBanner": "969px",
      "breakpointMedium": "53.125em",
      "color": Object {
        "alert": "#EEB544",
        "amazon": "#F5C056",
        "backgroundLayer": "rgba(0,0,0,0.45)",
        "backgroundLight": "#E6F2F8",
        "black": "#000",
        "blackOverlay": "rgba(0,0,0,0.7)",
        "bodytext": "#222",
        "commerce": "#72AD75",
        "darkBlackOverlay": "rgba(0,0,0,0.9)",
        "darkgray": "#666",
        "darksmoke": "#222",
        "error": "#D24A1D",
        "facebook": "#1877F2",
        "foregroundLayer": "rgba(0,0,0,0.4)",
        "google": "#DB4437",
        "gray": "#7D7D7D",
        "instagram": "#C32AA3",
        "lightgray": "#E5E5E5",
        "linkedin": "#0077B5",
        "logo": "#000",
        "midgray": "#CCC",
        "primary": "#0A7BC2",
        "primaryLight": "#0C91E4",
        "rss": "#7D7D7D",
        "secondarytext": "#7D7D7D",
        "success": "#23891F",
        "twitter": "#1DA1F2",
        "white": "#FFF",
        "whiteOverlay": "rgba(255,255,255,0.7)",
        "whitesmoke": "#F5F5F5",
        "youtube": "#FF0000",
      },
      "columnGutter": "2.25rem",
      "columnGutter19": Object {
        "largeUp": "1.5rem",
        "small19": "1rem",
        "xlargeUp": "2rem",
      },
      "columnPadding": "1.125rem",
      "columnPadding19": Object {
        "largeUp": "0.75rem",
        "small19": "0.5rem",
        "xlargeUp": "1rem",
      },
      "featuredContentWidth": "1024px",
      "globalNavHeight": "80px",
      "linkTransition": "0.1s ease-out",
      "mainContainerWidth": "66.5%",
      "mainContentMaxWidth": "800px",
      "pageWidth": "1336px",
      "postContentMaxWidth": "636px",
      "scrollbackNavHeight": "60px",
      "sidebarContainerWidth": "33.5%",
      "sidebarContentMaxWidth": "360px",
      "sidebarContentMinWidth": "300px",
      "slideshowTransitionDuration": "0.2s",
      "typography": Object {
        "body": Object {
          "fontFamily": "ElizabethSerif, Georgia, serif",
          "fontSizes": Object {
            "large": "27px",
            "medium": "19px",
            "small": "15px",
            "xlarge": "30px",
            "xsmall": "14px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "embiggenedHeadlineSize": "34px",
        "headline": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "headlineLineHeight": "1.3",
        "headlineSize": "24px",
        "permalinkHeadlineLineHeight": "1.2",
        "permalinkHeadlineSize": Object {
          "mediumUp": "2.5rem",
          "small": "2rem",
          "xxxlargeUp": "3rem",
        },
        "primary": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "serif": Object {
          "fontFamily": "ElizabethSerif, Georgia, serif",
          "fontSizes": Object {
            "large": "27px",
            "medium": "19px",
            "small": "15px",
            "xlarge": "30px",
            "xsmall": "14px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "tertiary": Object {
          "fontFamily": "FiraSans, sans-serif",
          "fontSizes": Object {
            "large": "29px",
            "medium": "21px",
            "small": "17px",
            "xlarge": "35px",
            "xsmall": "15px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "utility": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
      },
    }
  }
>
  <recent-video__VideoContainer
    position="frontpage"
  >
    <Header
      blogName="The A.V. Club"
      inSidebar={false}
      multipleVideos={false}
      position="frontpage"
      videoPageUrl="https://avclub.com/video"
    />
    <OnScreenHOC
      blogName="The A.V. Club"
      isAutoplay={true}
      isReplay={false}
      nowPlayingIndex={0}
      playNextVideo={[Function]}
      playVideo={[Function]}
      videoPageUrl="https://avclub.com/video"
      videos={
        Array [
          Object {
            "id": "105201",
            "postInfo": Object {
              "headline": "The First Order Watched Over Our Interview in <i>Star Wars: Galaxy&#39;s Edge</i>",
              "id": 1835238447,
              "isVideo": true,
              "permalink": "https://io9.gizmodo.com/the-first-order-watched-over-our-interview-in-star-wars-1835238447",
              "publishTimeMillis": 1559676600447,
              "thumbnailId": "qa/3691511",
            },
            "poster": Object {
              "id": "qa/3691511",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/105201/105201_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
        ]
      }
    />
    <recent-video__Title
      position="frontpage"
    >
      <recent-video__TitleLink
        dangerouslySetInnerHTML={
          Object {
            "__html": "The First Order Watched Over Our Interview in <i>Star Wars: Galaxy&#39;s Edge</i>",
          }
        }
        href="https://io9.gizmodo.com/the-first-order-watched-over-our-interview-in-star-wars-1835238447"
        onClick={[Function]}
      />
    </recent-video__Title>
    <recent-video__PublishDate>
      6/04/19 3:30PM
    </recent-video__PublishDate>
  </recent-video__VideoContainer>
</Theme>
`;

exports[`<RecentVideo /> should render with multiple videos 1`] = `
<Theme
  blog="avclub"
  theme={
    Object {
      "breakpointBanner": "969px",
      "breakpointMedium": "53.125em",
      "color": Object {
        "alert": "#EEB544",
        "amazon": "#F5C056",
        "backgroundLayer": "rgba(0,0,0,0.45)",
        "backgroundLight": "#E6F2F8",
        "black": "#000",
        "blackOverlay": "rgba(0,0,0,0.7)",
        "bodytext": "#222",
        "commerce": "#72AD75",
        "darkBlackOverlay": "rgba(0,0,0,0.9)",
        "darkgray": "#666",
        "darksmoke": "#222",
        "error": "#D24A1D",
        "facebook": "#1877F2",
        "foregroundLayer": "rgba(0,0,0,0.4)",
        "google": "#DB4437",
        "gray": "#7D7D7D",
        "instagram": "#C32AA3",
        "lightgray": "#E5E5E5",
        "linkedin": "#0077B5",
        "logo": "#000",
        "midgray": "#CCC",
        "primary": "#0A7BC2",
        "primaryLight": "#0C91E4",
        "rss": "#7D7D7D",
        "secondarytext": "#7D7D7D",
        "success": "#23891F",
        "twitter": "#1DA1F2",
        "white": "#FFF",
        "whiteOverlay": "rgba(255,255,255,0.7)",
        "whitesmoke": "#F5F5F5",
        "youtube": "#FF0000",
      },
      "columnGutter": "2.25rem",
      "columnGutter19": Object {
        "largeUp": "1.5rem",
        "small19": "1rem",
        "xlargeUp": "2rem",
      },
      "columnPadding": "1.125rem",
      "columnPadding19": Object {
        "largeUp": "0.75rem",
        "small19": "0.5rem",
        "xlargeUp": "1rem",
      },
      "featuredContentWidth": "1024px",
      "globalNavHeight": "80px",
      "linkTransition": "0.1s ease-out",
      "mainContainerWidth": "66.5%",
      "mainContentMaxWidth": "800px",
      "pageWidth": "1336px",
      "postContentMaxWidth": "636px",
      "scrollbackNavHeight": "60px",
      "sidebarContainerWidth": "33.5%",
      "sidebarContentMaxWidth": "360px",
      "sidebarContentMinWidth": "300px",
      "slideshowTransitionDuration": "0.2s",
      "typography": Object {
        "body": Object {
          "fontFamily": "ElizabethSerif, Georgia, serif",
          "fontSizes": Object {
            "large": "27px",
            "medium": "19px",
            "small": "15px",
            "xlarge": "30px",
            "xsmall": "14px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "embiggenedHeadlineSize": "34px",
        "headline": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "headlineLineHeight": "1.3",
        "headlineSize": "24px",
        "permalinkHeadlineLineHeight": "1.2",
        "permalinkHeadlineSize": Object {
          "mediumUp": "2.5rem",
          "small": "2rem",
          "xxxlargeUp": "3rem",
        },
        "primary": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "serif": Object {
          "fontFamily": "ElizabethSerif, Georgia, serif",
          "fontSizes": Object {
            "large": "27px",
            "medium": "19px",
            "small": "15px",
            "xlarge": "30px",
            "xsmall": "14px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "tertiary": Object {
          "fontFamily": "FiraSans, sans-serif",
          "fontSizes": Object {
            "large": "29px",
            "medium": "21px",
            "small": "17px",
            "xlarge": "35px",
            "xsmall": "15px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
        "utility": Object {
          "fontFamily": "ProximaNovaCond, sans-serif",
          "fontSizes": Object {
            "large": "32px",
            "medium": "24px",
            "small": "19px",
            "xlarge": "37px",
            "xsmall": "16px",
          },
          "lineHeights": Object {
            "large": "40px",
            "medium": "32px",
            "small": "24px",
            "xlarge": "44px",
            "xsmall": "24px",
          },
        },
      },
    }
  }
>
  <recent-video__VideoContainer
    position="frontpage"
  >
    <Header
      blogName="The A.V. Club"
      inSidebar={false}
      multipleVideos={true}
      position="frontpage"
      videoPageUrl="https://avclub.com/video"
    />
    <OnScreenHOC
      blogName="The A.V. Club"
      isAutoplay={true}
      isReplay={false}
      nowPlayingIndex={0}
      playNextVideo={[Function]}
      playVideo={[Function]}
      videoPageUrl="https://avclub.com/video"
      videos={
        Array [
          Object {
            "id": "105201",
            "postInfo": Object {
              "headline": "The First Order Watched Over Our Interview in <i>Star Wars: Galaxy&#39;s Edge</i>",
              "id": 1835238447,
              "isVideo": true,
              "permalink": "https://io9.gizmodo.com/the-first-order-watched-over-our-interview-in-star-wars-1835238447",
              "publishTimeMillis": 1559676600447,
              "thumbnailId": "qa/3691511",
            },
            "poster": Object {
              "id": "qa/3691511",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/105201/105201_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
          Object {
            "id": "101688",
            "postInfo": Object {
              "headline": "Arya Stark Understood Death, But Chose Life",
              "id": 1835091510,
              "isVideo": true,
              "permalink": "https://io9.gizmodo.com/arya-stark-understood-death-but-chose-life-1835091510",
              "publishTimeMillis": 1559318400510,
              "thumbnailId": "qa/3690005",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/101688/101688_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
          Object {
            "id": "114183",
            "postInfo": Object {
              "headline": "We Found the Very Best Truly Wireless Earbuds",
              "id": 1835118531,
              "isVideo": true,
              "permalink": "https://gizmodo.com/these-are-the-very-best-truly-wireless-earbuds-1835118531",
              "publishTimeMillis": 1559311200531,
              "thumbnailId": "xkb24d6jdoqbzy0f2b3h",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/114183/114183_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
          Object {
            "id": "105096",
            "postInfo": Object {
              "headline": "Cersei Lannister Rose to the Top of a Crumbling Kingdom",
              "id": 1835090598,
              "isVideo": true,
              "permalink": "https://io9.gizmodo.com/cersei-lannister-rose-to-the-top-of-a-crumbling-kingdom-1835090598",
              "publishTimeMillis": 1559150100598,
              "thumbnailId": "qa/3688840",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/105096/105096_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
          Object {
            "id": "109322",
            "postInfo": Object {
              "headline": "Google&#39;s Quest to Build the Perfect One-Tap Smartphone Camera",
              "id": 1835123686,
              "isVideo": true,
              "permalink": "https://gizmodo.com/googles-quest-to-build-the-perfect-one-tap-smartphone-c-1835123686",
              "publishTimeMillis": 1559744700686,
              "thumbnailId": "qa/3689149",
            },
            "streamingUrl": "https://kinja-vh.akamaihd.net/i/prod/109322/109322_,180p,270p,406p,720p,1080p,.mp4.csmil/master.m3u8",
            "type": "kinjavideo",
            "videoPage": true,
          },
        ]
      }
    />
    <recent-video__Title
      position="frontpage"
    >
      <recent-video__TitleLink
        dangerouslySetInnerHTML={
          Object {
            "__html": "The First Order Watched Over Our Interview in <i>Star Wars: Galaxy&#39;s Edge</i>",
          }
        }
        href="https://io9.gizmodo.com/the-first-order-watched-over-our-interview-in-star-wars-1835238447"
        onClick={[Function]}
      />
    </recent-video__Title>
    <recent-video__PublishDate>
      6/04/19 3:30PM
    </recent-video__PublishDate>
  </recent-video__VideoContainer>
</Theme>
`;
